contrast errors och alerts fixade via WAVE

--- a/css/our-members.css
+++ b/css/our-members.css
@@ -127,7 +127,7 @@ article h2 {
 article p {
     font-size: 1rem;
     line-height: 1.6;
-    color: #7f8c8d;
+    color: #313333;
 }
 
 #contact-info {
